k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcc
  template:
    metadata:
      labels:
        app: gcc
    spec:
      containers:
      - name: gcc
        image: gcr.io/gfsa-438010/gcc:latest
        ports:
        - containerPort: 3000
