k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcc
  namespace: main
spec:
  type: LoadBalancer
  selector:
    app: gcc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
