k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gcc
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "my-static-ip"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: gcc
            port:
              number: 3000
      - path: /uat
        pathType: Prefix
        backend:
          service:
            name: gcc
            port:
              number: 3000
      - path: /qa
        pathType: Prefix
        backend:
          service:
            name: gcc
            port:
              number: 3000
